--- a/app/templates/hitlijst/index.html
+++ b/app/templates/hitlijst/index.html
@@ -24,7 +24,7 @@
                         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 
                             <div class="container-fluid">
-                                {% for track in tracks %}
+                                {% for key, track in tracks.iteritems() %}
                                 <div class="row">
                                     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                         <a href="{{track.uri}}">{{track.name}}</a>
